prevent horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,7 @@ textarea {
 body {
   background-color: var(--body-color);
   color: black;
+  overflow-x: hidden;
 }
 
 body.dark {
